[package]
name = "mys-benchmark"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["full"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
clap.workspace = true
prometheus.workspace = true
rand.workspace = true
indicatif.workspace = true
duration-str.workspace = true
hdrhistogram.workspace = true
comfy-table.workspace = true
bcs.workspace = true
tokio-util.workspace = true
mys-core.workspace = true
mys-config.workspace = true
mys-network.workspace = true
mys-storage.workspace = true
mys-types.workspace = true
mys-sdk.workspace = true
mys-keys.workspace = true
mys-json-rpc-types.workspace = true
mys-protocol-config.workspace = true
mys-test-transaction-builder.workspace = true
mys-swarm-config.workspace = true
mys-surfer.workspace = true
telemetry-subscribers.workspace = true
roaring.workspace = true
regex.workspace = true
fastcrypto-zkp.workspace = true

move-core-types.workspace = true
mysten-metrics.workspace = true
test-cluster.workspace = true
sysinfo.workspace = true

[target.'cfg(msim)'.dependencies]
mys-framework.workspace = true
mys-framework-snapshot.workspace = true
mys-macros.workspace = true
mys-simulator.workspace = true
typed-store.workspace = true
