[package]
name = "mys-bridge-cli"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ethers = "2.0"
mys-bridge.workspace = true
mys-sdk.workspace = true
mys-types.workspace = true
mys-config.workspace = true
mys-keys.workspace = true
mys-json-rpc-types.workspace = true
shared-crypto.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
telemetry-subscribers.workspace = true
reqwest.workspace = true
futures.workspace = true
