[package]
name = "mys-e2e-tests"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
prometheus.workspace = true
fs_extra.workspace = true
indexmap.workspace = true
insta.workspace = true
jsonrpsee.workspace = true
test-cluster.workspace = true
rand.workspace = true
expect-test.workspace = true
tokio.workspace = true
tracing.workspace = true
assert_cmd.workspace = true
serde.workspace = true
bcs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde_json.workspace = true
reqwest.workspace = true
prost.workspace = true
tokio-stream.workspace = true

move-binary-format.workspace = true
move-package.workspace = true
telemetry-subscribers.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-core-types.workspace = true

mys-core.workspace = true
mys-framework.workspace = true
mys-json-rpc.workspace = true
mys-json-rpc-api.workspace = true
mys-node.workspace = true
mys-macros.workspace = true
mys-network.workspace = true
mys-simulator.workspace = true
mys-storage.workspace = true
mysten-metrics.workspace = true
mys-tool.workspace = true
mys-protocol-config.workspace = true
mys-types.workspace = true
mys-move-build.workspace = true
mys-swarm-config.workspace = true
mys-swarm.workspace = true
mys-test-transaction-builder.workspace = true
mys-config.workspace = true
mys-json-rpc-types.workspace = true
mys.workspace = true
mys-sdk.workspace = true
mys-keys.workspace = true
mys-rpc-api.workspace = true
shared-crypto.workspace = true
mys-sdk-types.workspace = true
mys-sdk-transaction-builder.workspace = true
tonic.workspace = true
prost-types.workspace = true

passkey-types.workspace = true
passkey-client.workspace = true
passkey-authenticator.workspace = true
coset.workspace = true
url.workspace = true
p256.workspace = true
