[package]
name = "mys-framework-snapshot"
version.workspace = true
edition = "2021"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Tool to create a bytecode snapshot of the current mys-framework"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true
bin-version.workspace = true

mys-framework.workspace = true
mys-protocol-config.workspace = true
mys-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
move-package.workspace = true
mys-move-build.workspace = true
