[package]
name = "mys-framework"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Move framework for mys platform"
license = "Apache-2.0"
publish = false

[dependencies]
bcs.workspace = true
serde.workspace = true
once_cell.workspace = true
tracing.workspace = true

mys-types.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true

[dev-dependencies]
anyhow.workspace = true
bcs.workspace = true
regex.workspace = true
tempfile.workspace = true

move-binary-format.workspace = true
move-compiler.workspace = true
move-package.workspace = true
mys-move-build.workspace = true
mys-config.workspace = true
