[package]
name = "mys-genesis-builder"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
camino.workspace = true
fastcrypto.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

shared-crypto.workspace = true
mys-config.workspace = true
mys-execution.workspace = true
mys-framework.workspace = true
mys-framework-snapshot.workspace = true
mys-protocol-config.workspace = true
mys-types.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[target.'cfg(msim)'.dependencies]
mys-simulator.workspace = true
