[package]
name = "mys-indexer-alt-framework"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bb8 = "0.8.5"
chrono.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["chrono"] }
diesel-async = { workspace = true, features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations.workspace = true
futures.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

mys-field-count.workspace = true
mys-indexer-alt-metrics.workspace = true
mys-pg-db.workspace = true
mys-storage.workspace = true
mys-types.workspace = true

[dev-dependencies]
rand.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
wiremock.workspace = true
